[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yentlguard"
version = "0.1.0"
description = "Mechanistic interpretability layer for clinical triage LLM bias — built on YentlBench"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Inna Rytsareva", email = "inna@harmonilab.org" }
]
keywords = [
    "mechanistic-interpretability",
    "clinical-ai",
    "bias-detection",
    "gemini",
    "arize-phoenix",
    "women-health",
    "triage"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"

dependencies = [
    # Core benchmark dependency
    "yentlbench>=0.2.2",

    # Gemini / Vertex AI
    "google-genai>=1.0.0",
    "google-cloud-aiplatform>=1.112.0",

    # ADK — agent framework
    # Requires Python >=3.10,<3.13 per ADK constraints; 3.11 satisfies both.
    "google-adk>=1.32.0",

    # Observability — phoenix.otel.register replaces manual OTLPSpanExporter setup.
    # auto_instrument=True patches google-genai and google-adk SDKs in one call.
    "arize-phoenix>=7.0",
    "openinference-instrumentation-google-adk>=0.1.11",

    # Retained for any direct OpenInference usage outside the agent layer.
    "openinference-instrumentation-google-genai>=0.1.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",

    # Metrics & data
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",

    # BigQuery + Agent Builder eval layer
    "google-cloud-bigquery>=3.20.0",
    "google-cloud-bigquery-storage>=2.25.0",
    "pyarrow>=16.0.0",
    "db-dtypes>=1.1.0",

    # MCP (Python SDK — used by existing PhoenixMCPClient internals)
    "mcp>=1.0.0",

    # Env var loading
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
]

[project.scripts]
yentlguard = "yentlguard.cli:main"

[project.urls]
Homepage = "https://harmonilab.org"
Repository = "https://github.com/harmonilab/yentlguard"
"Bug Tracker" = "https://github.com/harmonilab/yentlguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["yentlguard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
